Bug 1112410 - Handle set dormant during seeking. r=cpearce, a=bajaj